--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.12.9"
+    "@fontsource/koho": "^5.2.6",
+    "@tailwindcss/vite": "^4.1.11",
+    "astro": "^5.12.9",
+    "simple-icons-astro": "^15.10.0",
+    "tailwindcss": "^4.1.11"
   }
 }
